Major upgrade: beginner-friendly in-depth Java + Spring Boot lessons
- Upgraded 15 core Java lessons with beginner explanations, line-by-line
  code annotations, and real-world organizational scenarios:
  java-syntax, java-oop, java-exceptions, java-collections,
  java-generics, java-streams, java-functional, java-concurrency,
  java-date-time, java-modern, java-reflection, java-platform,
  java-jdbc, plus 6 new lessons (arrays-2d, string-pool, immutable-class,
  file-io, threadlocal, annotations-built-in)

- Upgraded 5 Spring Boot lessons with same depth:
  boot-philosophy, boot-rest-api, boot-testing, boot-configuration,
  error-handling-deep

- Each lesson now includes: beginner-friendly concept explanation,
  code snippets with line-by-line annotations, and real-world
  organizational scenarios

- Updated frontend counts to 569 lessons across 80 modules
- Fixed slug collision (string-pool → string-pool-intern)
- Both builds verified clean (mvn package + vite build)

🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>